deltafi-ui/src/styles/components/sidebar/app-menu.scss
/*
   DeltaFi - Data transformation and enrichment platform

   Copyright 2022 DeltaFi Contributors <deltafi@deltafi.org>

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
*/

.menu {
  position: fixed;
  height: 100vh;
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
  width: 300px;
  .nav-link {
    font-weight: 500;
    color: #333;
    .badge {
      line-height: 1.3;
      padding: 0.27rem 0.6rem 0 0.6rem;
      font-weight: 600;
    }
  }
  .nav-link.folder {
    font-weight: 300;
    color: #999;
    cursor: pointer;
  }
  .nav-link.indent {
    padding-left: 40px;
  }
  .nav-link .fa-fw {
    margin-right: 0.25rem;
    color: #999;
  }
  .nav-link i.fa-external-link-alt {
    font-size: 0.8rem !important;
  }
  .nav-link:hover {
    background-color: #f0f0f0;
  }
  .nav-link.active {
    font-weight: 600;
    background-color: #e6e6e6;
  }
  .submenu {
    transition: all 0.2s ease;
    max-height: 4rem;
  }
  .submenu.hidden {
    max-height: 0px;
    opacity: 0;
    overflow: hidden;
  }
}

@media (max-width: 768px) {
  .menu {
    width: 150px !important;
  }
}

